# RustTemp

./: .env  docker-compose.yml
Matcher/coral/: Cargo.toml
Matcher/coral-common/: Cargo.toml
Matcher/coral-common/src/: lib.rs
Matcher/coral-common/src/messages/: broadping.rs
Matcher/coral/src/: lib.rs  main.rs  wish.rs
Matcher/coral/src/handlers/: chat_handler.rs  ping_handler.rs  pong_handler.rs
Matcher/coral/src/stuff/: mod.rs  zob.rs
Matcher/coraline/: Cargo.toml
Matcher/coraline/src/: main.rs
Matcher/coraline/src/handlers/: chat_handler.rs  mod.rs  ping_handler.rs  pong_handler.rs
Pearl/Smoke/: README.md  package.json
Pearl/spark/: Cargo.toml
Pearl/spark/src/: main.rs  routes.rs
coral/: Cargo.toml  dockerfile
coraline/: Cargo.toml
coraline/src/: main.rs
doc/: architecture.txt
doc/how_to_not_do_things/: message_handlers.rs
miniredis/: Cargo.toml
miniredis/src/: frame.rs  handler.rs  lib.rs  listener.rs  message.rs  server.rs
miniredis/src/clients/: client.rs
miniredis/tests/: server.rs
minitest/: Cargo.toml
minitest/src/: main.rs  wish.rs
teal/: Cargo.toml  ferris.txt
teal/src/: lib.rs  onyx.rs
teal/src/hi/: hello.rs
teal/src/net/: client.rs  handler.rs  handlers.rs  message.rs  mod.rs  server.rs
teal/src/net/messages/: chat.rs  mod.rs  ping.rs  pong.rs
