[package]
name = "minitest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teal = { path = "../teal" }
miniredis = { path = "../miniredis" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
