[package]
name = "coral"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teal = { path = "../../teal" }
# miniredis = { path = "../../miniredis" }
redis = "*"
tokio = {version = "1.32.0", features = ["full"]}
serde = "1.0.188"
futures = "0.3.28"
bevy_ecs = "*"
log = "0.4.21"
tracing = "*"
inventory = "0.3.15"
# proc-macro2 = "1.0.79"
syn = "*"
quote = "*"
serde_bytes = "*"
bincode = "*"
derive-new = "0.6.0"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]

